--- a/src/style/sass/_button.sass
+++ b/src/style/sass/_button.sass
@@ -14,11 +14,32 @@
 .btn-start
     background-color: $main-one
     border: 1px solid black
-    padding: 3px 12px
     width: 200px
     height: 50px
 
     font-size: x-large
+
+    &:hover
+        background-color: $secondary-third
+
+.btn-logout
+    background-color: $main-two
+    border: 1px solid black
+    width: 100px
+    height: 30px
+
+    font-size: large
+
+    &:hover
+        background-color: $secondary-third
+
+.btn-login
+    background-color: $success
+    border: 1px solid black
+    width: 150px
+    height: 40px
+
+    font-size: large
 
     &:hover
         background-color: $secondary-third
