--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,7 +13,6 @@
 .btn-start {
   background-color: #1b4d7f;
   border: 1px solid black;
-  padding: 3px 12px;
   width: 200px;
   height: 50px;
   font-size: x-large;
@@ -22,8 +21,30 @@
   background-color: #4599b2;
 }
 
+.btn-logout {
+  background-color: #b52e28;
+  border: 1px solid black;
+  width: 100px;
+  height: 30px;
+  font-size: large;
+}
+.btn-logout:hover {
+  background-color: #4599b2;
+}
+
+.btn-login {
+  background-color: #4fa450;
+  border: 1px solid black;
+  width: 150px;
+  height: 40px;
+  font-size: large;
+}
+.btn-login:hover {
+  background-color: #4599b2;
+}
+
 .title {
-  padding: 0;
+  margin-top: 0;
   font-size: 50px;
 }
 
