Log page forms & display

--- a/src/style/sass/_button.sass
+++ b/src/style/sass/_button.sass
@@ -27,6 +27,7 @@
     border: 1px solid black
     width: 100px
     height: 30px
+    margin-top: 10px
 
     font-size: large
 
@@ -40,6 +41,7 @@
     height: 40px
 
     font-size: large
+    margin: 20px auto
 
     &:hover
         background-color: $secondary-third
