--- a/src/style/style.css
+++ b/src/style/style.css
@@ -26,6 +26,7 @@
   border: 1px solid black;
   width: 100px;
   height: 30px;
+  margin-top: 10px;
   font-size: large;
 }
 .btn-logout:hover {
@@ -38,6 +39,7 @@
   width: 150px;
   height: 40px;
   font-size: large;
+  margin: 20px auto;
 }
 .btn-login:hover {
   background-color: #4599b2;
@@ -60,6 +62,34 @@
 
 .five {
   font-size: 90px;
+}
+
+.label {
+  font-size: large;
+}
+
+.input {
+  height: 30px;
+  width: 200px;
+  margin: 0 20px 10px 0;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+.pass-input {
+  margin-left: 22px;
+  font-size: x-large;
+}
+
+.log-page-bottom {
+  display: flex;
+}
+
+.log-page-bottom-bloc {
+  margin-right: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
@@ -87,8 +117,11 @@ main {
   main {
     width: 100%;
     margin: 0;
-    padding: 10px 0;
   }
+}
+
+.main-log-page {
+  justify-content: space-around;
 }
 
 /*# sourceMappingURL=style.css.map */
