--- a/src/style/sass/style.sass
+++ b/src/style/sass/style.sass
@@ -2,7 +2,9 @@
 @import '_colors'
 @import '_title'
 @import '_input'
-@import '_log-page'
+@import 'pages/_log-page'
+@import 'pages/_pick-page'
+@import '_word'
 @import url('https://fonts.googleapis.com/css2?family=Charm')
 
 $font-main: Charm, sans-serif
