--- a/src/style/style.css
+++ b/src/style/style.css
@@ -93,6 +93,45 @@
   align-items: center;
 }
 
+h3 {
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+.pick-page-main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.pick-page-words {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.word {
+  cursor: pointer;
+  font-size: x-large;
+  background-color: #f8f9fa;
+  border-radius: 5px;
+  margin: 10px;
+  padding: 5px;
+  text-align: center;
+}
+.word:hover {
+  background-color: #6c757d;
+  color: white;
+}
+.word--picked {
+  background-color: #4599b2;
+  color: white;
+}
+.word--picked:hover {
+  background-color: #4599b2;
+  color: white;
+}
+
 body {
   margin: 0;
   padding: 0;
