First pick : words & languages

--- a/src/style/sass/_button.sass
+++ b/src/style/sass/_button.sass
@@ -45,3 +45,15 @@
 
     &:hover
         background-color: $secondary-third
+
+.btn-pick
+    background-color: $success
+    border: 1px solid black
+    width: 150px
+    height: 40px
+
+    font-size: large
+    margin: 40px auto
+
+    &:hover
+        background-color: $secondary-third
