--- a/src/style/sass/_word.sass
+++ b/src/style/sass/_word.sass
@@ -5,13 +5,18 @@
   font-size: x-large
   background-color: $secondary-one
   border-radius: 5px
-  margin: 10px
-  padding: 5px
+  margin: 20px
+  padding: 5px 15px
   text-align: center
+  border: 1px solid black
 
   &:hover
     background-color: $secondary-two
     color: white
+
+  &--lang
+    margin: 10px
+    display: flex
 
   &--picked
     background-color: $secondary-third
@@ -20,3 +25,6 @@
     &:hover
       background-color: $secondary-third
       color: white
+
+.flag
+  margin-right: 5px
