--- a/src/style/style.css
+++ b/src/style/style.css
@@ -45,6 +45,18 @@
   background-color: #4599b2;
 }
 
+.btn-pick {
+  background-color: #4fa450;
+  border: 1px solid black;
+  width: 150px;
+  height: 40px;
+  font-size: large;
+  margin: 40px auto;
+}
+.btn-pick:hover {
+  background-color: #4599b2;
+}
+
 .title {
   margin-top: 0;
   font-size: 50px;
@@ -108,6 +120,8 @@ h3 {
 .pick-page-words {
   display: flex;
   flex-wrap: wrap;
+  max-height: 70%;
+  overflow: auto;
 }
 
 .word {
@@ -115,13 +129,18 @@ h3 {
   font-size: x-large;
   background-color: #f8f9fa;
   border-radius: 5px;
-  margin: 10px;
-  padding: 5px;
+  margin: 20px;
+  padding: 5px 15px;
   text-align: center;
+  border: 1px solid black;
 }
 .word:hover {
   background-color: #6c757d;
   color: white;
+}
+.word--lang {
+  margin: 10px;
+  display: flex;
 }
 .word--picked {
   background-color: #4599b2;
@@ -130,6 +149,10 @@ h3 {
 .word--picked:hover {
   background-color: #4599b2;
   color: white;
+}
+
+.flag {
+  margin-right: 5px;
 }
 
 body {
