Home page display

--- a/src/style/sass/_button.sass
+++ b/src/style/sass/_button.sass
@@ -25,11 +25,12 @@
 .btn-logout
     background-color: $main-two
     border: 1px solid black
-    width: 100px
-    height: 30px
+    width: 70px
+    height: 25px
     margin-top: 10px
+    align-self: flex-end
 
-    font-size: large
+    font-size: small
 
     &:hover
         background-color: $secondary-third
