--- a/src/style/sass/style.sass
+++ b/src/style/sass/style.sass
@@ -2,8 +2,10 @@
 @import '_colors'
 @import '_title'
 @import '_input'
+@import '_game-line'
 @import 'pages/_log-page'
 @import 'pages/_pick-page'
+@import 'pages/_home-page'
 @import '_word'
 @import url('https://fonts.googleapis.com/css2?family=Charm')
 
