Word review page

--- a/src/style/sass/style.sass
+++ b/src/style/sass/style.sass
@@ -3,6 +3,7 @@
 @import '_title'
 @import '_input'
 @import '_game-line'
+@import '_word-review'
 @import 'pages/_log-page'
 @import 'pages/_pick-page'
 @import 'pages/_home-page'
